--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="fond-section">
 <img src="styles/images/fond.jpg" alt="">
 <div class="choix-gauche">
-  <a href="choixjuste1.html"> <img src="styles/images/k1p1.jpg" alt=""> </a>
+  <a href="win.html"> <img src="styles/images/k1p1.jpg" alt=""> </a>
   <a href="gameover.html"> <img src="styles/images/k2p3.jpg" alt=""> </a>
   <a href="gameover.html"> <img src="styles/images/k3p1.jpg" alt=""> </a>
 </div>
