--- a/gameover.html
+++ b/gameover.html
@@ -13,7 +13,7 @@
 
   <div class="Recommencer">
 
-  <a style="text-decoration:none" href="index.html"><p>Recommencer</p></a>
+  <a style="text-decoration:none" href="jeu.html"><p>Recommencer</p></a>
 
 </div>
 
