--- a/index.html
+++ b/index.html
@@ -2,28 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/main.css">
-      <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Quicksand" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main-accueil.css">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Quicksand" rel="stylesheet">
     <title>Les chevaliers et leurs servants</title>
   </head>
   <body>
-<header>
-  <div class="header-content-block">
-      <a style="text-decoration:none" href="javascript:history.go(-1)"> <h1>Les chevaliers et leurs servants</h1> </a>
-      <a style="text-decoration:none" href="histoire.html"><h2>Histoire</h2></a>
-      <a style="text-decoration:none" href="aide.html"><h2>Aide</h2></a>
-  </div>
-</header>
-<div class="fond-section">
-<img src="styles/images/fond.jpg" alt="">
-<div class="choix-gauche">
-  <a href="win.html"> <img src="styles/images/k1p1.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k2p3.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k3p1.jpg" alt=""> </a>
+    <h1>Les chevaliers et leurs servants</h1>
+
+    <h2>Il y a plusieurs années, trois chevaliers attendaient pour traverser la rivière Neva. Chaque chevalier avait son propre servant, il y avait donc en tout six personnes. Le bâteau qu'ils avaient ne pouvait en porter que deux. Cependant, les chevaliers étaient des tueurs féroces et les trois servants étaient terrifiées. En effet, ils étaient certain que chacun des servants pouvait mourrir d'insuffisance cardiaque s'il n'était pas tout le temps protégé des autres chevaliers par la présence de son propre maître. Y avait-il un moyen de faire traverser tout le monde de l'autre côté de la rivière que personne ne se fasse tuer?</h2>
+
+<div class="jouer">
+  <a style="text-decoration:none" href="jeu.html">Jouer</a>
 </div>
-</div>
-<div class="solution">
-  <a style="text-decoration:none"  href="video.html"> <h3>Voir la solution</h3> </a>
-</div>
+
   </body>
 </html>
