--- a/attention.html
+++ b/attention.html
@@ -2,28 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/main-attention.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main-histoire.css">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Quicksand" rel="stylesheet">
     <title>Histoire - Les chevaliers et leurs servants</title>
   </head>
   <body>
     <header>
       <div class="header-content-block">
-        <div class="bloc">
-          <div class="titre-bloc">
-          <a style="text-decoration:none" href="javascript:history.go(-1)"> <h1 class="title" >Les chevaliers et leurs servants</h1> </a>
-          </div>
-        </div>
-        <div class="bloc">
-          <div class="histoire-bloc">
+          <a style="text-decoration:none" href="javascript:history.go(-1)"> <h1>Les chevaliers et leurs servants</h1> </a>
           <a style="text-decoration:none" href="histoire.html"><h2>Histoire</h2></a>
-          </div>
-        </div>
-        <div class="bloc">
-          <div class="aide-bloc">
           <a style="text-decoration:none" href="aide.html"><h2>Aide</h2></a>
-          </div>
-        </div>
       </div>
     </header>
     <div class="texte">
