--- a/choixjuste1.html
+++ b/choixjuste1.html
@@ -15,11 +15,14 @@
   </div>
 </header>
 <div class="fond-section">
-<img src="styles/images/fond.jpg" alt="">
-<div class="choix-gauche">
-  <a href="choixjuste1.html"> <img src="styles/images/k1p1.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k2p3.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k3p1.jpg" alt=""> </a>
+<img src="styles/images/fond2.jpg" alt="">
+<div class="choix-gauche2">
+  <a href="attention.html"> <img src="styles/images/k3p3.jpg" alt=""> </a>
+  <a href="attention.html"> <img src="styles/images/k2p2.jpg" alt=""> </a>
+</div>
+<div class="choix-droit2">
+  <a href="choixjuste2.html"> <img src="styles/images/k1.jpg" alt=""> </a>
+  <a href="gameover.html"> <img src="styles/images/p1.jpg" alt=""> </a>
 </div>
 </div>
 <div class="solution">
