--- a/choixjuste2.html
+++ b/choixjuste2.html
@@ -16,10 +16,13 @@
 </header>
 <div class="fond-section">
 <img src="styles/images/fond.jpg" alt="">
-<div class="choix-gauche">
-  <a href="choixjuste1.html"> <img src="styles/images/k1p1.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k2p3.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k3p1.jpg" alt=""> </a>
+<div class="choix-gauche3">
+  <a href="gameover.html"> <img src="styles/images/k2p2.jpg" alt=""> </a>
+  <a href="choixjuste3.html"> <img src="styles/images/p2p3.jpg" alt=""> </a>
+  <a href="gameover.html"> <img src="styles/images/k1k3.jpg" alt=""> </a>
+</div>
+<div class="choix-droit3">
+  <a href="attention.html"> <img src="styles/images/p1.jpg" alt=""> </a>
 </div>
 </div>
 <div class="solution">
