--- a/choixjuste8.html
+++ b/choixjuste8.html
@@ -16,10 +16,15 @@
 </header>
 <div class="fond-section">
 <img src="styles/images/fond.jpg" alt="">
-<div class="choix-gauche">
-  <a href="choixjuste1.html"> <img src="styles/images/k1p1.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k2p3.jpg" alt=""> </a>
-  <a href="gameover.html"> <img src="styles/images/k3p1.jpg" alt=""> </a>
+<div class="choix-gauche3">
+  <a href="choixjuste9.html"> <img src="styles/images/p2p3.jpg" alt=""> </a>
+  <a href="gameover.html"> <img src="styles/images/p1.jpg" alt=""> </a>
+  <a href="gameover.html"> <img src="styles/images/p3.jpg" alt=""> </a>
+</div>
+<div class="choix-droit4">
+  <a href="attention.html"> <img src="styles/images/k1.jpg" alt=""> </a>
+  <a href="attention.html"> <img src="styles/images/k2.jpg" alt=""> </a>
+  <a href="attention.html"> <img src="styles/images/k3.jpg" alt=""> </a>
 </div>
 </div>
 <div class="solution">
